<resources>
    <string name="app_name">MeetChrysallis</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="correo">Correo eletrónico</string>
    <string name="contrasenya">Contraseña</string>
    <string name="loginincorrecto">Usuario/contraseña incorrectos</string>
    <string name="acceder">Acceder</string>
    <string name="contrasenyaolvidada"><u>¿No recuerdas la contraseña?</u></string>
    <string name="nav_opciones">Opciones</string>
    <string name="nav_home">Principal</string>
    <string name="nav_eventos">Mis eventos</string>
    <string name="fragmentHome_header">Eventos disponibles</string>
    <string name="error_conexion_db">No se ha podido conectar con la base de datos. Pruebe más tarde</string>
    <string name="cargando_comentarios">Cargando comentarios...</string>
    <string name="cargando_evento">Cargando evento...</string>
    <string name="telefono">Teléfono</string>
    <string name="modificar">Modificar</string>
    <string name="comunidades_interes">Comunidades suscritas</string>
    <string name="idioma">Idioma</string>
    <string name="contrasenya_actual">Contraseña actual</string>
    <string name="contrasenya_nueva">Contraseña nueva</string>
    <string name="contrasenya_confirmar">Repita la contraseña nueva</string>
    <string name="seleccione_idioma">Seleccione el idioma</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="castellano">Castellano</string>
    <string name="catalan">Catalán</string>
    <string name="ingles">Inglés</string>
    <string name="pulsar_para_salir">Pulse otra vez para salir</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="enviar">Enviar</string>
    <string name="se_actualizo_email">Se actualizó correctamente el email</string>
    <string name="email_actual">Email actual</string>
    <string name="hint_email">hola@hola.com</string>
    <string name="email_nuevo">Email nuevo</string>
    <string name="email_confirmar">Confirmar email nuevo</string>
    <string name="buscando_email">Buscando email en la base de datos...</string>
    <string name="campo_confirmar_error">Tanto el campo de \'Nuevo\' y el campo de \'Confirmación\' (este) han de coincidir</string>
    <string name="email_invalido">Email inválido</string>
    <string name="email_incorrecto">Email incorrecto</string>
    <string name="campo_invalido_vacio">Este campo no puede estar vacío</string>
    <string name="email_actualizado">Email actualizado</string>
    <string name="contrasenya_incorrecta">Contraseña incorrecta</string>
    <string name="contrasenya_invalida">Esta contraseña no es válida: debe de tener al menos 1 número, 1 letra mayúscula, 1 letra minúscula y un tamaño de 6-16 carácteres</string>
    <string name="contrasenya_actualizada">Contraseña actualizada</string>
    <string name="indique_comunidades">Marque las Comunidades que le interesen</string>
    <string name="eventos_pendientes">Eventos pendientes</string>
    <string name="error_no_eventos_pendientes">No tiene ningún evento pendiente.</string>
    <string name="error_no_eventos_asistidos">Todavía no ha asistido a ningún evento.</string>
    <string name="eventos_asistidos">Eventos asistidos</string>
    <string name="modificar_datos_personales">Modificar datos personales</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="contactar_equipo">Contactar con el equipo de desarrolladores</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="cargando">Cargando...</string>
    <string name="asistire">Asistiré</string>
    <string name="valora_el_evento">Valora el evento ¡Ayúdanos a mejorar!</string>
    <string name="no_hay_comentarios">No hay ningún comentario aun.</string>
    <string name="comentar">Escribir comentario</string>
    <string name="comentarios">Comentarios</string>
    <string name="email">Email</string>
    <string name="iniciando_sesion">Iniciando sesión...</string>
    <string name="no_hay_socio_registrado">No hay ningún socio registrado con ese email en la base de datos</string>
    <string name="escriba_su_email">Escriba su email</string>
    <string name="recuperacion_asunto">MeetChrysallis - Recuperación de contraseña</string>
    <string name="se_ha_enviado_correo">Se le ha enviado un correo con su nueva contraseña. En caso de no haberlo recibido, compruebe su carpeta de \'spam\' o su conexión a internet</string>
    <string name="confirmar_asistencia">Confirmar asistencia</string>
    <string name="confirmar">Confirmar</string>
    <string name="nuevo_comentario">Nuevo comentario</string>
    <string name="error_comentario_excede">El comentario excede el número máximo de carácteres permitidos</string>
    <string name="no_asistir">No asistiré</string>
    <string name="comentario_anadido">Comentario añadido</string>
    <string name="anonimo">Anónimo</string>
    <string name="indique_email_recuperacion">Es necesario que indique su email de soci@ para que así podamos enviarle la nueva contraseña.</string>
    <string name="error_comentario_demasiado_corto">El comentario contiene menos carácteres del mínimo permitido</string>
    <string name="valorar">Valorar</string>
    <string name="si_enviar">Sí, enviar</string>
    <string name="confirmar_valoracion">Confirmar valoración</string>
    <string name="msj_enviar_valoracion1">Ha valorado el evento con un</string>
    <string name="msj_enviar_valoracion2">Una vez se envíe la valoración no podrá ser modificada.\n¿Enviar?</string>
    <string name="no_eventos_disponibles">No hay eventos disponibles. Pruebe más tarde.</string>
    <string name="valoracion_enviada">Valoración enviada. ¡Gracias!</string>
    <string name="gracias_por_valorar">Muchas gracias por su valoración.</string>
    <string name="error_ccaa_minima">Se ha de seleccionar como mínimo una Comunidad Autónoma</string>
    <string name="indique_num_asistentes">Indique el número de personas que van a asistir al evento, por favor.</string>
    <string name="num_personas">"Número de personas: "</string>
    <string name="escriba_aqui_su_comentario">Escriba aquí su comentario</string>
    <string name="mostrar_nombre">Mostrar nombre</string>
    <string name="formulario_contacto">Formulario de contacto</string>
    <string name="indique_su_nombre">Indique su nombre</string>
    <string name="indique_su_email">Indique su email (*)</string>
    <string name="asunto">Indique el asunto</string>
    <string name="mensaje">Escriba su mensaje (*)</string>
    <string name="error_campo_minimo_caracteres">Campo inválido: carácteres insuficientes</string>
    <string name="datos_del_mensaje">Datos del mensaje</string>
    <string name="datos_de_contacto">Datos de contacto</string>
    <string name="mensaje_enviado">Mensaje enviado</string>
    <string name="no_se_envio_mensaje">No se pudo enviar el mensaje</string>
    <string name="no">No</string>
    <string name="desea_desapuntarse_evento">¿Desea desapuntarse del evento?</string>
    <string name="si_desapuntarse">Sí, desapuntarse</string>
    <string name="info_fecha">Fecha en la que el evento se celebra</string>
    <string name="info_fechaLim">Fecha límite para marcar su participación</string>
    <string name="info_comunidad">Comunidad Autónoma donde se celebra el evento</string>
    <string name="info_numComents">Número de comentarios que tiene el evento</string>
    <string name="info_ratingMedio">Valoración media del evento</string>
    <string name="cerrar">Cerrar</string>
    <string name="timeout">Se agotó el tiempo de espera. Pruebe de nuevo</string>
    <string name="seleccione_archivo_para_visualizar">Seleccione archivo para visualizar:</string>
    <string name="info_numAsistentes">Número de asistentes</string>
    <string name="cargando_eventos">Cargando eventos...</string>
    <string-array name="idiomas">
        <item>Castellano</item>
        <item>Catalán</item>
        <item>Inglés</item>
    </string-array>
    <string-array name="motivos">
        <item>-- Seleccione el motivo --</item>
        <item>Duda</item>
        <item>Problema</item>
        <item>Sugerencia</item>
        <item>Otro</item>
    </string-array>
</resources>