<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:text="@string/iniciar_sesion"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correo"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/mail"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/EditTextCorreo"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasenya"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/password"/>

            <EditText
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/EditTextPassword"
                android:inputType="textPassword"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginincorrecto"
            android:id="@+id/TxtLoginIncorrecto"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceder"
            android:layout_gravity="center"
            android:id="@+id/BtnAcceder"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombrepassolvidado"
            android:layout_gravity="center"
            android:id="@+id/BtnOlvidar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <ImageButton
            android:background="@color/colorPrimary"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:src="@drawable/cat"
            android:layout_marginRight="20dp"
            android:id="@+id/BtnCat"/>

        <ImageButton
            android:background="@color/colorPrimary"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:src="@drawable/esp"
            android:layout_marginRight="20dp"
            android:id="@+id/BtnEsp"/>

        <ImageButton
            android:background="@color/colorPrimary"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:src="@drawable/eng"
            android:id="@+id/BtnEng"/>

    </LinearLayout>

</LinearLayout>