<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <!-- DATOS PERSONALES -->
    <LinearLayout
        android:id="@+id/opciones_layout_modificarDatos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_person_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/modificar_datos_personales"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_regular"/>
    </LinearLayout>

    <!-- DIVISORIO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/md_yellow_700"/>

    <!-- IDIOMA -->
    <LinearLayout
        android:id="@+id/opciones_layout_idioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_language_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/idioma"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_regular"/>
    </LinearLayout>


    <!-- NOTIFICACIONES -->
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/opciones_layout_notificaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_notifications_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/notificaciones"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_regular"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right">
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="right"
                android:layout_marginRight="20dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- DIVISORIO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/md_yellow_700"/>

    <!-- CONTACTAR -->
    <LinearLayout
        android:id="@+id/opciones_layout_contactar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_email_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/contactar_equipo"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_regular"/>
    </LinearLayout>

    <!-- DIVISORIO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/md_yellow_700"/>

    <!-- LOGOUT -->
    <LinearLayout
        android:id="@+id/opciones_layout_cerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/icon_medium"
            android:layout_height="@dimen/icon_medium"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/ic_exit_to_app_black_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/cerrar_sesion"
            android:layout_gravity="center"
            android:fontFamily="@font/raleway_regular"/>
    </LinearLayout>

    <!-- DIVISORIO -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/md_yellow_700"/>
</LinearLayout>