<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/datos_de_contacto"
                android:textSize="@dimen/txt_header"
                android:background="@color/md_grey_500"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dialog_contacto_layoutNombre"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:hint="@string/indique_su_nombre"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/ic_person_black_24dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dialog_contacto_etNombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="30"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dialog_contacto_layoutEmail"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:hint="@string/indique_su_email"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/ic_email_black_24dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dialog_contacto_etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/datos_del_mensaje"
                android:textSize="@dimen/txt_header"
                android:background="@color/md_grey_500"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp">
                    <Spinner
                        android:id="@+id/dialog_contacto_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingVertical="7dp"
                        android:paddingHorizontal="10dp"
                        android:background="@drawable/background_spinner"
                        android:popupBackground="@drawable/background_spinner_popup"
                        android:spinnerMode="dropdown" />
                    <ImageView
                        android:id="@+id/dialog_contacto_ivErrorMotivo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        app:srcCompat="@drawable/ic_error_red_24dp"
                        android:layout_gravity="center"
                        android:visibility="gone"/>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dialog_contacto_layoutAsunto"
                    android:layout_marginTop="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    android:hint="@string/asunto"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/ic_content_paste_black_24dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dialog_contacto_etAsunto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLength="45"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dialog_contacto_layoutMensaje"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="350"
                    android:hint="@string/mensaje"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/ic_chat_black_24dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dialog_contacto_etMensaje"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="350"
                        android:inputType="textMultiLine"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>